tests/core/snapshots/execution_spec__grpc-reflection.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type NewsData {
  news: [News]!
}

scalar PhoneNumber

type Query {
  news: NewsData!
}

scalar Url

schema {
  query: Query
}
