tests/core/snapshots/execution_spec__test-add-field-error.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "Query",
      "@addField",
      "street"
    ],
    "description": "Path [user, address, street] does not exist"
  }
]
