tests/core/snapshots/execution_spec__test-dbl-usage-many.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "type is used in input and output",
    "trace": [
      "Post"
    ],
    "description": null
  },
  {
    "message": "type is used in input and output",
    "trace": [
      "User"
    ],
    "description": null
  }
]
