tests/core/snapshots/execution_spec__test-enum-empty.md_errors.snap
---
source: tests/core/spec.rs
assertion_line: 93
expression: errors
---
[
  {
    "message": " --> 6:1\n  |\n6 | }\n  | ^---\n  |\n  = expected enum_value_definition",
    "trace": [],
    "description": null
  }
]
