tests/core/snapshots/execution_spec__test-expr-with-inline.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Cannot add field",
    "trace": [
      "Query",
      "@addField"
    ],
    "description": "Path: [post, user, name] contains resolver expr at [Post.user]"
  }
]
