tests/core/snapshots/execution_spec__test-grpc-group-by.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "field id not found",
    "trace": [
      "Query",
      "newsById",
      "@grpc"
    ],
    "description": null
  }
]
