tests/core/snapshots/execution_spec__test-grpc-invalid-proto-id.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Protobuf files were not specified in the config",
    "trace": [
      "Query",
      "news",
      "@grpc"
    ],
    "description": null
  }
]
