tests/core/snapshots/execution_spec__test-grpc-missing-fields.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "missing key: id",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news"
    ],
    "description": null
  }
]
