tests/core/snapshots/execution_spec__test-grpc-nested-optional.md_errors.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "expected type to be required",
    "trace": [
      "Query",
      "news",
      "@grpc",
      "NewsData",
      "news"
    ],
    "description": null
  }
]
